2000-06-23  Paul D. Smith  <psmith@gnu.org>

	* Version 3.79.1 released.

	* configure.in: Add a new option, --disable-nsec-timestamps, to
	avoid using sub-second timestamps on systems that support it.  It
	can lead to problems, e.g. if your makefile relies on "cp -p".
	* README.template: Document the issue with "cp -p".

	* config.guess, config.sub: Updated.

2000-06-22  Paul D. Smith  <psmith@gnu.org>

	* job.c (start_job_command): Increment commands_started before the
	special check for ":" (empty command) to avoid spurious "is up to
	date" messages.  Also move the test for question_flag after we
	expand arguments, and only stop if the expansion provided an
	actual command to run, not just whitespace.  This fixes PR/1780.

2000-06-21  Paul D. Smith  <psmith@gnu.org>

	* read.c (read_makefile): If we find a semicolon in the target
	definition, remember where it was.  If the line turns out to be a
	target-specific variable, add back the semicolon and everything
	after it.  Fixes PR/1709.

2000-06-19  Paul D. Smith  <psmith@gnu.org>

	* config.h-vms.template: #define uintmax_t for this system.
	* config.ami.template: Ditto.
	* config.h.W32.template: Ditto.

	* configure.in: We don't use select(2) anymore, so don't bother
	checking for it.
	* acconfig.h: Ditto.
	* acinclude.m4: Ditto.

	* file.c (all_secondary): New static global; if 1 it means
	.SECONDARY with no prerequisites was seen in the makefile.
	(snap_deps): Set it appropriately.
	(remove_intermediates): Check it.
	(num_intermediates): Remove this global, it's not used anywhere.
	(considered): Move this to remake.c and make it static.

	* NEWS: Document the change to .SECONDARY.
	* make.texinfo (Special Targets): Document the change to .SECONDARY.

	* implicit.c (pattern_search): Remove the increment of
	num_intermediates; it's not used.
	* filedef.h: Remove num_intermediates and considered.

	* function.c (handle_function): If the last argument was empty, we